Fixed some colors and the scrollbars

--- a/styles/email-frame.less
+++ b/styles/email-frame.less
@@ -2,7 +2,7 @@
 
 .ignore-in-parent-frame {
   body {
-    color: @accent-dark;
+    color: @black; //composing mail;
   }
   img {
     color: @accent-dark;
