--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,15 +1,18 @@
 /**
  * Colors
  */
+ @breeze-blue: #3daee9;
+ @breeze-link: #d11ce2;
+ @white: #fafafa;
+ @black: #000000;
+ 
 @accent-lighter: lighten(#49b1e8, 20%);
-@accent-light: darken(#6d7070, 30%);
-@accent-accent: darken(#49b1e8, 10%);
+@accent-light: #000000; //text of folder list
+@accent-accent:@breeze-blue; //selected folder background
 @inactive-tab: #cdcfd0;
 @panel-background: #eff0f1;
 @accent-dark: #6d7070;
-@breeze-blue: #1c9de2;
-@white: #fafafa;
-@black: #000000;
+
 
 /**
  * Borders
